--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,17 @@
-appdirs==1.4.4
-asgiref==3.4.1
-bcrypt==3.2.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-cryptography==3.4.7
-defusedxml==0.7.1
-distlib==0.3.1
-Django==3.2.13
-django-filter==21.1
-djangorestframework==3.13.1
-filelock==3.0.12
-idna==2.10
-importlib-metadata==4.11.3
-Jinja2==3.1.0
-Markdown==3.3.7
-MarkupSafe==2.1.1
-mysql-connector==2.2.9
-mysql-connector-python==8.0.26
-mysqlclient==2.0.3
-numpy==1.20.3
-oauthlib==3.1.0
-opencv-contrib-python==4.5.2.52
-opencv-python==4.5.2.52
-pandas==1.3.5
-protobuf==3.18.0
-pycparser==2.20
-PyJWT==2.1.0
-PyMySQL==1.0.2
+asgiref==3.6.0
+coverage==7.1.0
+Django==3.0.7
+django-filter==22.1
+django-model-utils==4.3.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+Markdown==3.4.1
+mysqlclient==2.1.1
+numpy==1.24.2
+pandas==1.5.3
+PyJWT==2.6.0
 python-dateutil==2.8.2
-python3-openid==3.2.0
-pytz==2021.1
-PyYAML==6.0
-requests==2.25.1
-requests-oauthlib==1.3.0
-six==1.15.0
-social-auth-app-django==4.0.0
-social-auth-core==4.1.0
-sqlparse==0.4.2
-typing-extensions==3.10.0.2
-urllib3==1.26.4
-virtualenv==20.4.6
-zipp==3.4.0
+pytz==2022.7.1
+six==1.16.0
+sqlparse==0.4.3
+tzdata==2022.7
